compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_duplicate_function_decl.snap
---
source: tests/fixtures.rs
assertion_line: 1275
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/duplicate_function_decl.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × duplicate function declaration
   ╭─[tests/fixtures/diagnostics/types/duplicate_function_decl.ml:2:4]
 1 │ fn helper() { 1 }
 2 │ fn helper() { 2 }
   ·    ───┬──
   ·       ╰── this function name is already declared in this module
 3 │ 
   ╰────
  help: choose a unique function name
